# ai-video-compression

./: .gitignore  FINDINGS.md  pyproject.toml  videoquant_design.md
.factory/: init.sh  services.yaml
.factory/skills/core-algorithm-worker/: SKILL.md
.factory/skills/integration-worker/: SKILL.md
.factory/skills/quality-metrics-worker/: SKILL.md
benchmarks/: cpu_performance.py  end_to_end.py  memory_overhead.py  tpq_compression.py
scripts/: benchmark_memory.py  compare_quality.py  evaluate_quality.py  generate_video.py  load_wan2.1.py  test_pipeline.py  verify_layer_precision.py  verify_metrics.py
tests/: test_diffusers_integration.py  test_kernels.py  test_mamp.py  test_metrics.py  test_pipeline.py  test_sqjl.py  test_tpq.py  test_wan21_support.py
videoquant/: __init__.py
videoquant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
videoquant/core/: __init__.py  kernels.py  mamp.py  pipeline.py  sqjl.py  tpq.py
videoquant/core/__pycache__/: kernels._cartesian_to_polar_numba-42.py314.1.nbc  kernels._cartesian_to_polar_numba-42.py314.nbi  kernels._cartesian_to_polar_numba-43.py314.1.nbc  kernels._cartesian_to_polar_numba-43.py314.nbi  kernels._dequantize_symmetric_numba-94.py314.1.nbc  kernels._dequantize_symmetric_numba-94.py314.nbi  kernels._dequantize_symmetric_numba-95.py314.1.nbc  kernels._dequantize_symmetric_numba-95.py314.nbi  kernels._polar_to_cartesian_numba-55.py314.1.nbc  kernels._polar_to_cartesian_numba-55.py314.nbi  kernels._polar_to_cartesian_numba-56.py314.1.nbc  kernels._polar_to_cartesian_numba-56.py314.nbi  kernels._quantize_symmetric_numba-68.py314.1.nbc  kernels._quantize_symmetric_numba-68.py314.nbi  kernels._quantize_symmetric_numba-69.py314.1.nbc  kernels._quantize_symmetric_numba-69.py314.nbi  kernels._sign_quantize_numba-119.py314.1.nbc  kernels._sign_quantize_numba-119.py314.nbi  kernels._sign_quantize_numba-120.py314.1.nbc  kernels._sign_quantize_numba-120.py314.nbi
videoquant/integration/: __init__.py  config.py  diffusers_pipeline.py  quantization_hooks.py
videoquant/metrics/: __init__.py
(+2 files in other folders)
